--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -26,7 +26,13 @@
                             th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span> |
                 阅读数: <span class="index-question-text" th:text="${question.viewCount} "></span>
             </span>
-            <hr>
+            <hr class="hr-margin">
+            <span th:each="tag: ${question.tag.split(',')}">
+<!--                <span class="glyphicon glyphicon-tags"></span>-->
+                <span class="label label-info glyphicon glyphicon-tags" th:text="' '+${tag}"></span>
+            </span>
+
+            <hr class="hr-margin">
             <text th:text="${question.description}"></text>
             <hr>
 
@@ -59,7 +65,8 @@
                         <button class="btn btn-xs glyphicon glyphicon-thumbs-up icon-color" type="button"
                                 th:text="' '+ ${comment.likeCount}"></button>
                         <button class="btn btn-xs glyphicon glyphicon-comment icon-color" type="button"
-                                th:data-id="${comment.id}" th:text="' '+ ${comment.commentCount}" onclick="collapseComments(this)">
+                                th:data-id="${comment.id}" th:text="' '+ ${comment.commentCount}"
+                                onclick="collapseComments(this)">
                         </button>
                         <span class="index-question-text pull-right"
                               th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd')}">
@@ -67,25 +74,25 @@
                     </div>
                     <!--                    二级评论-->
                     <div class="sub-comment collapse" th:id="${'comment-'+comment.id}">
-<!--                        <div class="media comment-list-each" th:each="comment:${comments}">-->
-<!--                            <div class="media-left ">-->
-<!--                                <a href="#">-->
-<!--                                    <img class="media-object index-list-icon img-rounded"-->
-<!--                                         th:src="${comment.user.getAvatarUrl()}">-->
-<!--                                </a>-->
-<!--                            </div>-->
-<!--                            <div class="media-body">-->
-<!--                                <a th:href="@{/profile}">-->
-<!--                                    <h4 class="index-question-desc" th:text="${comment.user.getName()}"></h4>-->
-<!--                                </a>-->
-<!--                                <span class="index-question-desc" th:text="${comment.content}"></span>-->
-<!--                                <div>-->
-<!--                                    <span class="index-question-text pull-right"-->
-<!--                                          th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd')}">-->
-<!--                                    </span>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                        <!--                        <div class="media comment-list-each" th:each="comment:${comments}">-->
+                        <!--                            <div class="media-left ">-->
+                        <!--                                <a href="#">-->
+                        <!--                                    <img class="media-object index-list-icon img-rounded"-->
+                        <!--                                         th:src="${comment.user.getAvatarUrl()}">-->
+                        <!--                                </a>-->
+                        <!--                            </div>-->
+                        <!--                            <div class="media-body">-->
+                        <!--                                <a th:href="@{/profile}">-->
+                        <!--                                    <h4 class="index-question-desc" th:text="${comment.user.getName()}"></h4>-->
+                        <!--                                </a>-->
+                        <!--                                <span class="index-question-desc" th:text="${comment.content}"></span>-->
+                        <!--                                <div>-->
+                        <!--                                    <span class="index-question-text pull-right"-->
+                        <!--                                          th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd')}">-->
+                        <!--                                    </span>-->
+                        <!--                                </div>-->
+                        <!--                            </div>-->
+                        <!--                        </div>-->
                         <div class="input-group comment">
                             <input type="text" class="form-control" placeholder="输入回复" th:id="${'input-'+comment.id}">
                             <span class="input-group-btn">
@@ -133,9 +140,19 @@
                         <h4 class="index-question-desc" th:text="${question.user.getName()}"></h4>
                     </a>
                 </div>
+                <hr>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>相关问题</h4>
+                <hr class="hr-margin">
+                <div class="media" th:each="question: ${relatedQuestions}">
+                    <div class="media-body">
+                        <h5 class="media-heading">
+                            <a th:href="@{/question/{id}(id = ${question.id})}" th:text="${question.getTitle()}"></a>
+                        </h5>
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
