--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -10,6 +10,7 @@
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
     <script src="/js/community.js"></script>
+    <script src="/js/publish.js"></script>
 </head>
 <body class="body">
 <div th:insert="navigation :: navbar"></div>
@@ -35,28 +36,38 @@
                     <input type="text" class="form-control" id="tag" name="tag" th:value="${tag}"
                            placeholder="输入标签，以“，”分隔..." autocomplete="off" onclick="showSelectTag()">
                     <br>
-                    <div id="selectTag" class="selectTag-border selectTag" tabindex="0">
+                    <div id="selectTag" class="selectTag-border selectTag show">
                         <!-- Nav tabs -->
                         <ul class="nav nav-tabs nav-tag" role="tablist">
-                            <li role="presentation" class="active">
-                                <a href="#home" aria-controls="home" role="tab" data-toggle="tab">开发语言</a>
+                            <li role="presentation" th:each="nav: ${tags}">
+                                <a th:href="${'#' + nav.getCategoryName()}" aria-controls="home" role="tab"
+                                   data-toggle="tab" th:text="${nav.getCategoryName()}"></a>
                             </li>
-                            <li role="presentation">
-                                <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">平台框架</a>
-                            </li>
+                            <!--                            <li role="presentation" class="active">-->
+                            <!--                                <a href="#home" aria-controls="home" role="tab" data-toggle="tab">开发语言</a>-->
+                            <!--                            </li>-->
+                            <!--                            <li role="presentation">-->
+                            <!--                                <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">平台框架</a>-->
+                            <!--                            </li>-->
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content tab-div">
-                            <div role="tabpanel" class="tab-pane active" id="home">
+                            <div role="tabpanel" class="tab-pane" th:id="${nav.getCategoryName()}" th:each="nav: ${tags}">
                                 <span class="label label-info glyphicon glyphicon-tags point" onclick="selectTag(this)"
-                                      th:text="' '+Java"></span>
+                                      th:each="tag: ${nav.getTags()}" th:text="' '+${tag}"></span>
+<!--                                <span class="label label-info glyphicon glyphicon-tags point" onclick="selectTag(this)"-->
+<!--                                      th:text="' '+Java"></span>-->
                             </div>
-                            <div role="tabpanel" class="tab-pane" id="profile">
-                                <span class="label label-info glyphicon glyphicon-tags point" onclick="selectTag(this)"
-                                      th:text="' '+Spring"></span>
-                                <span class="label label-info glyphicon glyphicon-tags point" onclick="selectTag(this)"
-                                      th:text="' '+Spring+' '+boot"></span>
-                            </div>
+<!--                            <div role="tabpanel" class="tab-pane active" id="home">-->
+<!--                                <span class="label label-info glyphicon glyphicon-tags point" onclick="selectTag(this)"-->
+<!--                                      th:text="' '+Java"></span>-->
+<!--                            </div>-->
+<!--                            <div role="tabpanel" class="tab-pane active" id="profile">-->
+<!--                                <span class="label label-info glyphicon glyphicon-tags point" onclick="selectTag(this)"-->
+<!--                                      th:text="' '+Spring"></span>-->
+<!--                                <span class="label label-info glyphicon glyphicon-tags point" onclick="selectTag(this)"-->
+<!--                                      th:text="' '+Spring+' '+boot"></span>-->
+<!--                            </div>-->
                         </div>
                     </div>
                 </div>
