--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -29,7 +29,7 @@
                            placeholder="问题标题..." autocomplete="off">
                 </div>
                 <div class="form-group" id="question-editor">
-<!--                    <label for="description"></label>-->
+                    <!--                    <label for="description"></label>-->
                     <textarea style="display:none;" name="description" id="description" th:text="${description}">
                     </textarea>
                     <script type="text/javascript">
@@ -40,7 +40,10 @@
                                 path: "/editor.md-master/lib/",
                                 delay: 0,
                                 watch: false,
-                                placeholder:"问题补充（必填，请参照右侧提示）："
+                                placeholder: "问题补充（必填，请参照右侧提示）：",
+                                imageUpload: false,                 //暂无对象存储服务器，暂不支持图片上传
+                                imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
+                                imageUploadURL: "/file/upload"
                             });
                         });
                     </script>
